module(
    name = "wasmedge_go",
    version = "0.14.0",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")
use_repo(go_sdk, "go_toolchains")

register_toolchains("@go_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "wasmedge_c",
    build_file_content = """
cc_library(
    name = "wasmedge_c",
    srcs = select({
        "@platforms//os:linux": glob(["**/libwasmedge.so*"], allow_empty = True),
        "@platforms//os:macos": glob(["**/libwasmedge.dylib*"], allow_empty = True),
        "@platforms//os:windows": glob(["**/wasmedge.lib"], allow_empty = True),
        "//conditions:default": glob(["**/libwasmedge.so*"], allow_empty = True),
    }),
    hdrs = glob(["**/include/**/*"], allow_empty = True),
    includes = [
        "WasmEdge-0.14.0-Linux/include",
        "WasmEdge-0.14.0-Darwin/include",
        "WasmEdge-0.14.0-Windows/include",
        "include",
        ".",
    ],
    visibility = ["//visibility:public"],
)
""",
    urls = [
        "https://github.com/WasmEdge/WasmEdge/releases/download/0.14.0/WasmEdge-0.14.0-ubuntu20.04_x86_64.tar.gz",
        "https://github.com/WasmEdge/WasmEdge/releases/download/0.14.0/WasmEdge-0.14.0-darwin_aarch64.tar.gz",
        "https://github.com/WasmEdge/WasmEdge/releases/download/0.14.0/WasmEdge-0.14.0-windows_x86_64.zip",
    ],
)
