[package]
name = "accumulate"
version = "0.1.0"
authors = ["wangshishuo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"

[lib]
name = "accumulate"
path = "accumulate.rs"
crate-type =["cdylib"]
